--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,110 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true,
+    "jest": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "react-hooks"
+  ],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "error",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/object-curly-spacing": ["error", "always"],
+    "curly": ["error", "all"],
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          [
+            "internal",
+            "parent",
+            "sibling"
+          ],
+          "index"
+        ],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        },
+        "newlines-between": "always"
+      }
+    ],
+    "max-len": ["error", 140],
+    "no-console": "error",
+    "no-empty-function": ["error", { "allow":  ["constructors"] }],
+    "no-empty": "error",
+    "no-mixed-operators": ["error", { "allowSamePrecedence": true }],
+    "no-multiple-empty-lines": ["error", { "max":  1 }],
+    "no-param-reassign": ["error", { "props": false }],
+    "no-unused-expressions": "error",
+    "no-unused-vars": ["error", {
+      "ignoreRestSiblings": true,
+      "args": "all",
+      "argsIgnorePattern": "^_"
+    }],
+    "no-useless-constructor": "error",
+    "semi": ["error", "never"],
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+    "jsx-quotes": ["error", "prefer-single"],
+    "comma-dangle": ["error", "always-multiline"],
+    "indent": ["error", 4, { "SwitchCase": 1 }],
+    "object-curly-spacing": ["error", "always"],
+    "eol-last": "error",
+    "react-hooks/rules-of-hooks": "error",
+    "react/destructuring-assignment": ["warn", "always"],
+    "react/jsx-curly-spacing": [
+      "error",
+      {
+        "when": "never",
+        "children": {
+          "when": "never"
+        }
+      }
+    ],
+    "react-hooks/exhaustive-deps": "warn",
+    "react/jsx-max-props-per-line": ["error", { "maximum": 1 }],
+    "react/jsx-indent-props": ["error", 4],
+    "react/jsx-first-prop-new-line": ["error", "multiline"],
+    "react/jsx-closing-bracket-location": ["error", "line-aligned"],
+    "space-infix-ops": ["error", { "int32Hint": false }],
+    "key-spacing": ["error", {
+      "beforeColon": false,
+      "afterColon": true
+    }
+    ],
+    "comma-spacing": ["error", {
+      "before": false,
+      "after": true
+    }
+    ],
+    "@typescript-eslint/member-delimiter-style": [
+      "error",
+      {
+        "multiline": {
+          "delimiter": "none"
+        },
+        "singleline": {
+          "delimiter": "comma",
+          "requireLast": false
+        }
+      }
+    ]
+  }
 }
