--- a/package.json
+++ b/package.json
@@ -6,19 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db-push": "npx prisma migrate dev --name update-db",
+    "db-gui": "npx prisma studio"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.10.2",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.7",
+    "@tanstack/react-query": "^5.20.5",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "axios": "^1.6.7",
+    "csstype": "^3.1.3",
+    "framer-motion": "^11.0.6",
+    "next": "14.1.0",
+    "moment": "^2.30.1",
+    "pretendard": "^1.3.9",
+    "prisma": "^5.10.2",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tanstack/react-query-devtools": "^5.24.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
