--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@nextui-org/input": "^2.1.18",
+    "@nextui-org/react": "^2.3.1",
     "@prisma/client": "^5.10.2",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
@@ -22,13 +24,14 @@
     "axios": "^1.6.7",
     "csstype": "^3.1.3",
     "framer-motion": "^11.0.6",
-    "next": "14.1.0",
     "moment": "^2.30.1",
+    "next": "14.1.0",
     "pretendard": "^1.3.9",
     "prisma": "^5.10.2",
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
+    "react-image-color-picker": "^1.3.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
